manifests/backend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scicat-backend
  namespace: scicat
spec:
  selector:
    matchLabels:
      k8s-app: backend-scicat
  template:
    metadata:
      labels:
        k8s-app: backend-scicat
        network-policy-ingress-allowed: "true"
    spec:
      containers:
        - name: backend
          image: ghcr.io/scicatproject/backend-next:latest
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 3000
              name: backend
          volumeMounts:
          - name: functional-accounts
            mountPath: /home/node/app/functionalAccounts.json
            subPath: functionalAccounts.json
            readOnly: true
      volumes:
        - name: functional-accounts
          secret:
            secretName: functional-accounts
