manifests/mongodb-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scicat-mongo
  namespace: scicat
spec:
  strategy:
    type: Recreate # shutdown mongo instance before restarting, as mongo uses locking
  selector:
    matchLabels:
      k8s-app: mongo-scicat
  template:
    metadata:
      labels:
        k8s-app: mongo-scicat
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
