manifests/backend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: scicat
  labels:
    k8s-app: backend-scicat
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    k8s-app: backend-scicat
