manifests/frontend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: scicat
  labels:
    k8s-app: frontend-scicat
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    k8s-app: frontend-scicat
