manifests/mongodb-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: scicat
  labels:
    k8s-app: mongo-scicat
spec:
  ports:
  - name: mongodb
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    k8s-app: mongo-scicat
