manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: scicat
  namespace: scicat
spec:
  ingressClassName: nginx
  rules:
  - host: scicat.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /explorer-next
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  tls:
  - hosts:
    - scicat.example.com
    secretName: scicat-tls
